# earlyman

./: .gitignore  CMakeLists.txt  MVP.md  Makefile  README.md  WMakefile  ego  go  index.html  library_foo.js  main.cpp  main.js
assets/data/: gang.db
assets/models/: cube_m.json  hideout_m.json
assets/shaders/: simple.core330.frag  simple.es300.frag
docs/: sprint1.md
libs/: .gitignore
models/: cube_m.json
shaders/: simple.es300.vert  simple.frag  simple.vert
source_assets/: cube.blend  cube.blend1  hideout.blend  hideout.xcf  land.blend
src/: bmpreader.h  glfw_window.cpp  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h  sim.h  window.cpp  window.h
utils/: export  io_export_earlyman.py  run.py
